<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BT Contacts Share</string>
    
    <string name="banner_ad_unit_id">ca-app-pub-9674501681746717/4859915387</string>
	<string name="ad_unit_id">ca-app-pub-9674501681746717/3571861787</string>
	<string name="two_back_touch_exit_app">To exit the app, press the Back button again.</string>
    
	<string name="backup_folder">/mnt/sdcard/BTShareContacts</string>
	
    <!--  DeviceListActivity -->
    <string name="bluetooth">BLUETOOTH</string>
    <string name="scanning">scanning for devices...</string>
    <string name="bluetooth_connect">connect bluetooth</string>
    <string name="no_connected">No connected devices</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No nearby Bluetooth devices found.</string>
    
    <string name="title_my_device">My Device</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_allow_search">Allow search on other devices</string>
    <string name="change_device_name">Change Device Name</string>
    
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
        
    <string name="contact">Contact</string>
    <string name="chat">Chatting</string>
    <string name="my_device">My Device</string>    
    <string name="remote_device">Remote Device</string>    
    <string name="connect">Connect</string>
    <string name="connected">Connected</string>
    <string name="connect_failed">connection failed</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
	<string name="confirm_connection">Confirm Connection</string>
	<string name="confirm_connection_message">A connection request has been received from xxxxx.\nDo you want to connect?</string>
    <string name="generat_transfer_data">Generating transfer data</string>
	<string name="send_transfer_data">Transferring data</string>
	<string name="delete_format">Deleted( xxxxx )</string>
	
    <string name="get_contact_list">Get contact list</string>    
    <string name="search_text">Search( Name or Number or Email )</string>
    <string name="send_to_remote_device">Send to remote device</string>
    <string name="send_to_remote_device_info">Send to xxxxx selected contacts to remote device</string>
    <string name="send_to_my_device">Send to my device</string>
    <string name="send_to_my_device_indo">Send to xxxxx selected contacts to my device</string>
    <string name="delete">Delete</string>
    <string name="delete_info">Delete the xxxxx selected contacts.</string>
    <string name="selecte_all">Selecte ALL</string>
    <string name="clear_all">Clear ALL</string>
    <string name="backup_selected_contacts">Backup selected contacts</string>
    <string name="backup_info">Backup the xxxxx selected contacts.</string>
    <string name="enter_backup_name">Please enter backup name</string>
    
    <string name="backup_result">backed up xxxxx contacts with the name yyyyy</string>
    <string name="bluetooth_not_enable">Quit the app because Bluetooth is not enabled.</string>
    
</resources>
